--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,57 +1,61 @@
-* {
-    box-sizing: border-box;
+h2{
+  font-size: 26px;
+}
+h3{
+  font-size: 22px;
+}
+.cat-info{
+  display: flex;
+  flex-direction: row;
+  gap: 50px;
+  justify-content: center;
+}
+.cat-info p{
+  width: 600px;
+  font-size: 20px;
+}
+@keyframes rotate {
+  0% {
+      transform: rotate(0)
   }
-  
-  body {
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-      Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    background-color: #fafafa;
-    color: #212121;
-    line-height: 1.5;
+  100% {
+      transform: rotate(360deg)
   }
-  
-  #search-box {
-    font: inherit;
-    padding: 8px;
-    max-width: 320px;
-    margin-bottom: 16px;
-  }
-  
-  
-  .country-info__wrapper {
-    display: flex;
-    align-items: center;
-    gap: 10px;
-  }
-  
-  .country-info__name {
-    margin: 0;
-  
-    font-size: 35;
-    font-weight: 700;
-  }
-  
-  .country-list {
-    display: flex;
-    flex-direction: column;
-    gap: 15px;
-  
-    margin: 0;
-    padding: 0;
-  }
-  
-  .country-list__item {
-    display: flex;
-    align-items: center;
-    gap: 10px;
-  }
-  
-  .country-list__name {
-    margin: 0;
-    padding: 0;
-  
-    font-weight: 700;
-  }
-  
+}
+.photo {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+}
+select {
+  background-color: rgb(191, 216, 245);
+  border: thin solid blue;
+  border-radius: 6px;
+  display: inline-block;
+  font: inherit;
+  line-height: 1.5em;
+  padding: 0.5em 3.5em 0.5em 1em;
+
+  margin-bottom: 40px;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+}
+select.breed-select {
+  background-image:
+      linear-gradient(45deg, transparent 50%, blue 50%),
+      linear-gradient(135deg, blue 50%, transparent 50%),
+      linear-gradient(to right, yellow, yellow);
+  background-position:
+      calc(100% - 20px) calc(1em + 2px),
+      calc(100% - 15px) calc(1em + 2px),
+      100% 0;
+  background-size:
+      5px 5px,
+      5px 5px,
+      2.5em 2.5em;
+  background-repeat: no-repeat;
+}
